# Atlas.cli

./: Cargo.toml  README.md
.qwen/: settings.json
atlas/: PROGRESS.md
atlas-website/: .gitignore  README.md  package-lock.json  package.json
atlas-website/src/app/: globals.css  layout.tsx  page.tsx
atlas-website/src/app/dashboard/: page.tsx
atlas-website/src/app/setup/: page.tsx
atlas-website/src/components/: SmoothScroll.tsx
atlas/.qwen/: settings.json
atlas/src/: ai.rs  config.rs  main.rs  notifier.rs  scanner.rs
src/: report.rs
